added source type generic to import configurator base class